--- a/app/assets/stylesheets/v2.scss
+++ b/app/assets/stylesheets/v2.scss
@@ -59,6 +59,37 @@ h3 {
 }
 
 
+/* Flash notifications */
+.notification-banner {
+  width: 100%;
+  padding: 0 1rem;
+
+  .notification {
+    padding: 0.75rem 1rem;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+
+    &.is-success {
+      background-color: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
+    }
+
+    &.is-warning {
+      background-color: #fff3cd;
+      color: #856404;
+      border: 1px solid #ffc107;
+    }
+
+    &.is-danger {
+      background-color: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
+    }
+  }
+}
+
 /* Paragraph CSS */
 p {
   font-size: 1.2em;
